Added additional fields to the slave model
